Bug 560954 - [14] [javadoc] Records - javadoc for record components - added conform tests
Change-Id: Ic482598373c01af72dd1fc8291eceb92737101a4
Signed-off-by: Vikas Chandra <Vikas.Chandra@in.ibm.com>